syntax = "proto3";

package auth;

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse) {}
    rpc Verify (VerifyRequest) returns (VerifyResponse) {}
    rpc Register (RegisterRequest) returns (RegisterResponse) {}
}

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    int32 status = 1;
    repeated string error = 2;
}


message LoginRequest {
    string email = 1;
    string password =2;
}

message LoginResponse {
    int32 status = 1;
    string token = 3;
    repeated string error = 2;
}

message VerifyRequest {
    string token = 1;
}

message VerifyResponse {
    string userId = 1;
    int32 status = 2;
    repeated string error = 3;
}