syntax = "proto3";

package product_query;

service ProductQueryService {
}