syntax = "proto3";

package order_command;


service OrderCommandService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
}


message ProductData {
    string id = 1;
    optional string name = 2;
    optional int32 price = 3;
    optional string description = 4;
}


message CreateOrderResponse {
    int32 status = 1;
    repeated string error = 2;
}


message CreateOrderRequest {
    repeated ProductData products = 1;
}