export const AUTH_PACKAGE_NAME = "auth";

export const AUTH_SERVICE_NAME = "AuthService"

// Module: product
export const PRODUCT_QUERY_PACKAGE_NAME = "product_query"

export const PRODUCT_COMMAND_PACKAGE_NAME = "product_command"

export const PRODUCT_QUERY_SERVICE_NAME = "ProductQueryService"

export const PRODUCT_COMMAND_SERVICE_NAME = "ProductCommandService"


// Module: order
export const ORDER_COMMAND_PACKAGE_NAME = "order_command"

export const ORDER_COMMAND_SERVICE_NAME = "OrderCommandService"

export const ORDER_COMMAND_PROTO_PATH = "proto/order/order-command.proto"